IMPALA-549: Failure during Prepare() of TopNNode causes segfault due to NULL ptr access

Change-Id: I5756195dcc818db0cbd8a28434363dae93aa77a5
Reviewed-on: http://gerrit.ent.cloudera.com:8080/296
Tested-by: jenkins
Reviewed-by: Henry Robinson <henry@cloudera.com>